--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app'
+include ':app', ':01优酷菜单', ':02广告条效果-viewpager', ':03下拉框', ':04自定义开关', ':05自适应textview', ':06弧形圆形布局菜单', ':07漂亮对话框', ':08loading对话框', ':09仿qq未读消息效果', ':10加号变叉号', ':11时间控件ui', ':datetimelibrary', ':datetimepicker', ':12特效对话框', ':13对话框组件可做上下弹出布局', ':searchlibrary', ':14搜索框特效', ':15指示器viewpager仿网易新闻', ':16圆形菜单', ':17360软件详情页'
